# buildgraph

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
buildgraph/: __init__.py  base_step.py  binding.py  colours.py  context.py  graph.py  steps.py  tabulated_writer.py  timer.py  utils.py
examples/: basic.py  subgraph.py
tests/: test_steps.py
