[metadata]
name = buildgraph
version = 0.0.1
description = Tools for building
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubuntom/buildgraph
project_urls =
    Bug Tracker = https://github.com/ubuntom/buildgraph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = buildgraph
packages = find:
python_requires = >=3.7

[options.packages.find]
where = buildgraph